--- a/portfolio/assets/css/main.css
+++ b/portfolio/assets/css/main.css
@@ -161,11 +161,19 @@ input, select, textarea {
 	}
 
 	.intro-text {
+		display: inline-block;
 		color: white;
-		font-weight: 500;			
+		font-weight: 700;					
 	}
 	/*********************************************/
 
+		
+	/****************INTRO SECTION ANIMATION**********************************/
+	/*.animated-text-div {
+		width: 100%;
+		
+	}*/
+	
 	h1 a, h2 a, h3 a, h4 a, h5 a, h6 a {
 		text-decoration: none;
 		color: inherit;
@@ -1545,7 +1553,7 @@ input, select, textarea {
 		font-size: 1em;
 		border-radius: 8px;
 		border: solid 1px #ddd;
-		background: #fff;
+		background: #fff;		
 		color: #bbb;
 		box-shadow: inset 0px 2px 3px 1px rgba(0, 0, 0, 0.05), 0px 1px 0px 0px rgba(255, 255, 255, 0.025);
 		width: 100%;
@@ -1819,7 +1827,14 @@ input, select, textarea {
 					-webkit-transition: background-color .2s ease-in-out;
 					-ms-transition: background-color .2s ease-in-out;
 					transition: background-color .2s ease-in-out;
-					background-color: #444;
+					/*background-color: #444;*/
+
+					/***************************added**************************/
+					/*background-color: #EA8A95;*/
+					/***************background-color: #2DAAE4;*/
+					/*background-color: #3BA8D3;*/
+					background-color: #43bff0;
+
 					border-radius: 6px;
 					box-shadow: inset 0px 0px 0px 1px #282828, inset 0px 2px 1px 0px rgba(255, 255, 255, 0.1);
 					color: #2E2E2E !important;
@@ -1834,12 +1849,37 @@ input, select, textarea {
 					width: 48px;
 				}
 
-				ul.social li a.fa-twitter {
+				/*********************added - social icon colors before hover******************/
+				ul.social li a.fa-twitter:before  {
+					background-color: #43bff0;
+					
+				}
+
+				ul.social li a.fa-linkedin-in:before {
+					/*background-color: #006599;*/
+					background-color: #C4376B;
+				}
+
+				ul.social li a.fa-github:before {
+					/*background-color: #FAFAFA;*/
+					background-color: #E0D7C8;
+
+				}
+
+				/*icons move up during hover*/
+				ul.social li a:hover {
+					top: -5px;
+				}
+
+				/*************this code is responsible for individual background colors of all the icons during a mouse over or hover***/
+				/*ul.social li a.fa-twitter {
 					background-color: #2DAAE4;
+					
 				}
 
 				ul.social li a.fa-facebook-f {
 					background-color: #3C5A98;
+					
 				}
 
 				ul.social li a.fa-dribbble {
@@ -1848,18 +1888,23 @@ input, select, textarea {
 
 				ul.social li a.fa-linkedin-in {
 					background-color: #006599;
+					
 				}
 
 				ul.social li a.fa-tumblr {
 					background-color: #51718A;
+					
 				}
 
 				ul.social li a.fa-google-plus {
 					background-color: #DA2713;
+					
 				}
 
 				ul.social li a.fa-github {
 					background-color: #FAFAFA;
+					
+
 				}
 
 				ul.social li a.fa-rss {
@@ -1898,13 +1943,11 @@ input, select, textarea {
 					background-color: #4C8AB0;
 				}
 
-				ul.social li a:hover {
-					top: -5px;
-				}
+				
 
 					ul.social li a:hover:before {
 						background-color: transparent;
-					}
+					}*/
 
 /* Actions */
 
@@ -1952,7 +1995,7 @@ input, select, textarea {
 			width: auto;
 		}
 
-/* Icons */
+/***************************************************** Icons **********************************************************/
 
 	.icon {
 		text-decoration: none;
@@ -1987,6 +2030,8 @@ input, select, textarea {
 		.icon.brands:before {
 			font-family: 'Font Awesome 5 Brands';
 		}
+
+		
 
 		.icon.featured {
 			color: #EA8A95;
@@ -2041,14 +2086,17 @@ input, select, textarea {
 			.wrapper.style4 form select,
 			.wrapper.style4 form textarea {
 				border: none;
-				background: #282828;
+				/*background: #282828;*/
+				background: white;
 			}
 
 				.wrapper.style4 form input[type=text]:focus,
 				.wrapper.style4 form input[type=password]:focus,
 				.wrapper.style4 form select:focus,
 				.wrapper.style4 form textarea:focus {
-					background: #252525;
+					/*background: #252525;*/
+					background-color: white;
+					color: black;
 				}
 
 /* Nav */
@@ -2332,7 +2380,24 @@ input, select, textarea {
 
 		/* Social */
 
-			ul.social {
+		/*********************MOBILE STYLES FOR THE SOCIAL ICONS - social icon colors before hover******************/
+		ul.social li a.fa-twitter:before  {
+			background-color: #43bff0;
+			
+		}
+
+		ul.social li a.fa-linkedin-in:before {
+			/*background-color: #006599;*/
+			background-color: #C4376B;
+		}
+
+		ul.social li a.fa-github:before {
+			/*background-color: #FAFAFA;*/
+			background-color: #E0D7C8;
+
+		}
+
+			/*ul.social {
 				padding: 1em 0.5em 0 0.5em;
 			}
 
@@ -2346,7 +2411,9 @@ input, select, textarea {
 
 						ul.social li a:before {
 							background-color: transparent !important;
-						}
+						}*/
+
+						
 
 		/* Actions */
 
@@ -2401,7 +2468,7 @@ input, select, textarea {
 		/* Wrappers */
 
 			.wrapper {
-				padding: 3em 0;
+				padding: 3em 0;				
 				text-align: center;
 			}
 
